added bootstrapping container

--- a/example.env
+++ b/example.env
@@ -1,5 +1,15 @@
+# Ersteinrichtung
+GHOST_SETUP_NAME="Vorname Nachname"
+GHOST_SETUP_EMAIL="admin@example.com"
+GHOST_SETUP_PASSWORD="<Passwort>"
+GHOST_SETUP_BLOG_TITLE="Spectre"
+SPECTRE_ZIP_URL="https://github.com/hutt/spectre/releases/latest/download/spectre.zip"
+
 # Domain
 DOMAIN=meine-website.de
+
+# Container Name Prefix
+CONTAINER_NAME_PREFIX=spectre
 
 # Mail-Einstellungen
 GHOST_MAIL_TRANSPORT=SMTP
