--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   ghost:
-    container_name: meine-website-ghost
+    container_name: ${CONTAINER_NAME_PREFIX}-ghost
     image: ghost:latest
     depends_on:
       - redis
@@ -52,8 +52,8 @@ services:
       hostSettings__postsPublicCache__enabled: "true"
       hostSettings__linkRedirectsPublicCache__enabled: "true"
     volumes:
-      - /opt/containers/meine-website/content:/var/lib/ghost/content
-      - /opt/containers/meine-website/config.production.json:/var/lib/ghost/config.production.json:ro
+      - ./content:/var/lib/ghost/content
+      - ./config.production.json:/var/lib/ghost/config.production.json:ro
     networks:
       - default
       - proxy
@@ -65,34 +65,58 @@ services:
     labels:
       - "traefik.enable=true"
       # HTTP=>HTTPS
-      - "traefik.http.routers.meine-website-ghost-insecure.rule=Host(`${DOMAIN}`) && !PathPrefix(`/proxy/`) && !PathPrefix(`/.ghost/activitypub/`) && !Path(`/.well-known/webfinger`) && !Path(`/.well-known/nodeinfo`)"
-      - "traefik.http.routers.meine-website-ghost-insecure.entrypoints=http"
-      - "traefik.http.routers.meine-website-ghost-insecure.service=meine-website-ghost"
-      - "traefik.http.middlewares.meine-website-redirect-to-https.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.meine-website-redirect-to-https.redirectscheme.permanent=true"
-      - "traefik.http.routers.meine-website-ghost-insecure.middlewares=meine-website-redirect-to-https"
+      - "traefik.http.routers.spectre-ghost-insecure.rule=Host(`${DOMAIN}`) && !PathPrefix(`/proxy/`) && !PathPrefix(`/.ghost/activitypub/`) && !Path(`/.well-known/webfinger`) && !Path(`/.well-known/nodeinfo`)"
+      - "traefik.http.routers.spectre-ghost-insecure.entrypoints=http"
+      - "traefik.http.routers.spectre-ghost-insecure.service=spectre-ghost"
+      - "traefik.http.middlewares.spectre-redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.middlewares.spectre-redirect-to-https.redirectscheme.permanent=true"
+      - "traefik.http.routers.spectre-ghost-insecure.middlewares=spectre-redirect-to-https"
       # HTTPS Ghost
-      - "traefik.http.routers.meine-website-ghost.rule=Host(`${DOMAIN}`) && !PathPrefix(`/proxy/`) && !PathPrefix(`/.ghost/activitypub/`) && !Path(`/.well-known/webfinger`) && !Path(`/.well-known/nodeinfo`)"
-      - "traefik.http.routers.meine-website-ghost.entrypoints=https"
-      - "traefik.http.routers.meine-website-ghost.service=meine-website-ghost"
-      - "traefik.http.services.meine-website-ghost.loadbalancer.server.port=2368"
-      - "traefik.http.services.meine-website-ghost.loadbalancer.passhostheader=true"
-      - "traefik.http.routers.meine-website-ghost.tls=true"
-      - "traefik.http.routers.meine-website-ghost.tls.certresolver=http"
-      - "traefik.http.routers.meine-website-ghost.middlewares=compresstraefik"
+      - "traefik.http.routers.spectre-ghost.rule=Host(`${DOMAIN}`) && !PathPrefix(`/proxy/`) && !PathPrefix(`/.ghost/activitypub/`) && !Path(`/.well-known/webfinger`) && !Path(`/.well-known/nodeinfo`)"
+      - "traefik.http.routers.spectre-ghost.entrypoints=https"
+      - "traefik.http.routers.spectre-ghost.service=spectre-ghost"
+      - "traefik.http.services.spectre-ghost.loadbalancer.server.port=2368"
+      - "traefik.http.services.spectre-ghost.loadbalancer.passhostheader=true"
+      - "traefik.http.routers.spectre-ghost.tls=true"
+      - "traefik.http.routers.spectre-ghost.tls.certresolver=http"
+      - "traefik.http.routers.spectre-ghost.middlewares=compresstraefik"
       - "traefik.http.middlewares.compresstraefik.compress=true"
       # ActivityPub HTTPS
-      - "traefik.http.routers.meine-website-ghost-activitypub.entrypoints=https"
-      - "traefik.http.routers.meine-website-ghost-activitypub.rule=Host(`${DOMAIN}`) && (PathPrefix(`/.ghost/activitypub/`) || Path(`/.well-known/webfinger`) || Path(`/.well-known/nodeinfo`))"
-      - "traefik.http.routers.meine-website-ghost-activitypub.service=meine-website-ghost-activitypub"
-      - "traefik.http.services.meine-website-ghost-activitypub.loadbalancer.server.url=https://ap.ghost.org"
-      - "traefik.http.services.meine-website-ghost-activitypub.loadbalancer.passhostheader=true"
-      - "traefik.http.routers.meine-website-ghost-activitypub.tls=true"
-      - "traefik.http.routers.meine-website-ghost-activitypub.tls.certresolver=http"
+      - "traefik.http.routers.spectre-ghost-activitypub.entrypoints=https"
+      - "traefik.http.routers.spectre-ghost-activitypub.rule=Host(`${DOMAIN}`) && (PathPrefix(`/.ghost/activitypub/`) || Path(`/.well-known/webfinger`) || Path(`/.well-known/nodeinfo`))"
+      - "traefik.http.routers.spectre-ghost-activitypub.service=spectre-ghost-activitypub"
+      - "traefik.http.services.spectre-ghost-activitypub.loadbalancer.server.url=https://ap.ghost.org"
+      - "traefik.http.services.spectre-ghost-activitypub.loadbalancer.passhostheader=true"
+      - "traefik.http.routers.spectre-ghost-activitypub.tls=true"
+      - "traefik.http.routers.spectre-ghost-activitypub.tls.certresolver=http"
       - "traefik.docker.network=proxy"
 
+  ghost-bootstrap:
+    container_name: ${CONTAINER_NAME_PREFIX}-bootstrap
+    build:
+      context: ./bootstrap
+    image: meine-website/ghost-bootstrap:latest
+    restart: "no"
+    environment:
+      GHOST_ADMIN_URL: ${GHOST_ADMIN_URL}
+      GHOST_SETUP_NAME: ${GHOST_SETUP_NAME}
+      GHOST_SETUP_EMAIL: ${GHOST_SETUP_EMAIL}
+      GHOST_SETUP_PASSWORD: ${GHOST_SETUP_PASSWORD}
+      GHOST_SETUP_BLOG_TITLE: ${GHOST_SETUP_BLOG_TITLE}
+      SPECTRE_ZIP_URL: ${SPECTRE_ZIP_URL}
+      DOMAIN: ${DOMAIN}
+    volumes:
+      - ./routes.yaml:/bootstrap/routes.yaml:ro
+      - ./bootstrap/pages:/bootstrap/pages:ro
+      - ./bootstrap/posts:/bootstrap/posts:ro
+    depends_on:
+      ghost:
+        condition: service_healthy
+    networks:
+      - default
+
   redis:
-    container_name: meine-website-redis
+    container_name: ${CONTAINER_NAME_PREFIX}-redis
     image: redis:7-alpine
     restart: unless-stopped
     volumes:
@@ -108,14 +132,14 @@ services:
       retries: 3
 
   proxy:
-    container_name: meine-website-proxy
+    container_name: ${CONTAINER_NAME_PREFIX}-proxy
     image: nginx:alpine
     depends_on:
       - ghost
     restart: unless-stopped
     volumes:
       - ./nginx-proxy.conf:/etc/nginx/nginx.conf:ro
-      - ./proxy-cache:/var/cache/nginx
+      - proxy-cache:/var/cache/nginx
     networks:
       - default
       - proxy
@@ -127,17 +151,16 @@ services:
           timeout: 10s
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.meine-website-proxy.rule=Host(`${DOMAIN}`) && PathPrefix(`/proxy/`)"
-      - "traefik.http.routers.meine-website-proxy.entrypoints=https"
-      - "traefik.http.routers.meine-website-proxy.tls=true"
-      - "traefik.http.routers.meine-website-proxy.tls.certresolver=http"
-      - "traefik.http.services.meine-website-proxy.loadbalancer.server.port=80"
-      - "traefik.http.services.meine-website-proxy.loadbalancer.passhostheader=true"
+      - "traefik.http.routers.spectre-proxy.rule=Host(`${DOMAIN}`) && PathPrefix(`/proxy/`)"
+      - "traefik.http.routers.spectre-proxy.entrypoints=https"
+      - "traefik.http.routers.spectre-proxy.tls=true"
+      - "traefik.http.routers.spectre-proxy.tls.certresolver=http"
+      - "traefik.http.services.spectre-proxy.loadbalancer.server.port=80"
+      - "traefik.http.services.spectre-proxy.loadbalancer.passhostheader=true"
       - "traefik.docker.network=proxy"
 
 volumes:
-  ghost-data:
-  traefik-certificates:
+  proxy-cache:
 
 networks:
   default:
