--- a/example.env
+++ b/example.env
@@ -3,7 +3,7 @@ GHOST_SETUP_NAME="Vorname Nachname"
 GHOST_SETUP_EMAIL="admin@example.com"
 GHOST_SETUP_PASSWORD="<Passwort>"
 GHOST_SETUP_BLOG_TITLE="Spectre"
-SPECTRE_ZIP_URL="https://github.com/hutt/spectre/releases/latest/download/spectre.zip"
+SPECTRE_ZIP_URL=https://github.com/hutt/spectre/releases/latest/download/spectre.zip
 
 # Domain
 DOMAIN="meine-website.de"
