--- a/example.env
+++ b/example.env
@@ -1,15 +1,18 @@
+# Domain
+DOMAIN="meine-website.de"
+
 # Ersteinrichtung
 GHOST_SETUP_NAME="Vorname Nachname"
 GHOST_SETUP_EMAIL="admin@example.com"
 GHOST_SETUP_PASSWORD="<Passwort>"
 GHOST_SETUP_BLOG_TITLE="Spectre"
-SPECTRE_ZIP_URL=https://github.com/hutt/spectre/releases/latest/download/spectre.zip
 
-# Domain
-DOMAIN="meine-website.de"
-
-# Container Name Prefix
+# Config
 CONTAINER_NAME_PREFIX="spectre"
+GHOST_ADMIN_API_KEY="id:secret"
+SPECTRE_ZIP_URL="https://github.com/hutt/spectre/releases/latest/download/spectre.zip"
+GHOST_ACCEPT_VERSION=v6.0
+CODEINJECTION_HEAD=true
 
 # Mail-Einstellungen
 GHOST_MAIL_TRANSPORT="SMTP"
