testing new auth methods

--- a/bootstrap/Dockerfile
+++ b/bootstrap/Dockerfile
@@ -1,18 +1,9 @@
-FROM alpine:3.20
-
-# Systempakete in einem Layer für schnellere Rebuilds
-RUN apk add --no-cache \
-    bash \
-    curl \
-    jq \
-    unzip \
-    ca-certificates \
-    coreutils \
-    openssl \
-    sqlite
-
-# bootstrap.sh in separatem Layer, damit nur dieser Layer bei Änderungen neu gebaut wird
-COPY bootstrap.sh /usr/local/bin/bootstrap.sh
-RUN chmod +x /usr/local/bin/bootstrap.sh
-
-ENTRYPOINT ["/usr/local/bin/bootstrap.sh"]
+FROM node:20-alpine
+RUN apk add --no-cache bash curl jq python3
+WORKDIR /bootstrap
+COPY package.json /bootstrap/package.json
+RUN npm ci --omit=dev || npm install --omit=dev
+COPY bootstrap.sh /bootstrap/bootstrap.sh
+COPY node-bootstrap.mjs /bootstrap/node-bootstrap.mjs
+RUN chmod +x /bootstrap/bootstrap.sh
+CMD ["/bootstrap/bootstrap.sh"]
