--- a/example.env
+++ b/example.env
@@ -13,6 +13,7 @@ GHOST_ADMIN_API_KEY="id:secret"
 SPECTRE_ZIP_URL="https://github.com/hutt/spectre/releases/latest/download/spectre.zip"
 GHOST_ACCEPT_VERSION=v6.3
 CODEINJECTION_HEAD=true
+DEBUG_BOOTSTRAP=0
 
 # Mail-Einstellungen
 GHOST_MAIL_TRANSPORT="SMTP"
