--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -8,8 +8,8 @@ http {
     # Cache für YouTube-Inhalte (1 Stunde)
     proxy_cache_path /var/cache/nginx/youtube levels=1:2 keys_zone=youtube:50m max_size=500m inactive=1h use_temp_path=off;
 
-    resolver 8.8.8.8 8.8.4.4 1.1.1.1 valid=300s;
-    resolver_timeout 5s;
+    # resolver 8.8.8.8 8.8.4.4 1.1.1.1 valid=300s;
+    # resolver_timeout 5s;
 
     server {
         listen 80;
@@ -32,7 +32,7 @@ http {
             proxy_set_header X-Forwarded-For "";
 
             proxy_ssl_server_name on;
-            proxy_ssl_verify off;
+            proxy_ssl_verify on;
             proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
@@ -53,7 +53,7 @@ http {
             add_header X-Proxy-Cache youtube-1h;
 
             proxy_ssl_server_name on;
-            proxy_ssl_verify off;
+            proxy_ssl_verify on;
             proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
@@ -74,7 +74,7 @@ http {
             add_header X-Proxy-Cache youtube-1h;
 
             proxy_ssl_server_name on;
-            proxy_ssl_verify off;
+            proxy_ssl_verify on;
             proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
@@ -95,7 +95,7 @@ http {
             add_header X-Proxy-Cache youtube-1h;
 
             proxy_ssl_server_name on;
-            proxy_ssl_verify off;
+            proxy_ssl_verify on;
             proxy_cache_key $scheme$proxy_host$request_uri;
         }
 
