fixed authentication with JWT

--- a/example.env
+++ b/example.env
@@ -10,6 +10,7 @@ GHOST_SETUP_BLOG_TITLE="Spectre"
 # Config
 CONTAINER_NAME_PREFIX="spectre"
 SPECTRE_ZIP_URL="https://github.com/hutt/spectre/releases/latest/download/spectre.zip"
+GHOST_API_VERSION_ACCEPT=6.3
 
 # Mail-Einstellungen
 GHOST_MAIL_TRANSPORT="SMTP"
